# DulApp

./: CMakeLists.txt  LICENSE  README.md  Raport_de_analiza_SmartDrobe.docx
Entities/: Haina.cpp  Haina.h
Interface/: Interface.cpp  Interface.h
Main/: main.cpp
Repositories/: TestInput.json
Services/: DulapManager.cpp  DulapManager.h  HaineListener.cpp  HaineListener.h  HaineManager.cpp  HaineManager.h  JSONHandler.cpp  JSONHandler.h  Libraries.h  NotificationManager.cpp  NotificationManager.h  ProfilDulap.cpp  ProfilDulap.h  RequestWrapper.cpp  RequestWrapper.h  SearchEngine.cpp  SearchEngine.h  Services.cpp  Services.h  VoiceCommand.cpp  VoiceCommand.h
